# DA_study_template

./: .gitignore  .gitmodules  LICENSE  README.md  activate_miniforge.sh  make_miniconda.sh  make_miniforge.sh  pyproject.toml  requirements.txt  source_python.sh
doc/: clusters_and_GPUs.md  how_to_use.md  installation_guide.md
master_study/: 001_make_folders.py  001_make_folders_MD2024.py  001_make_folders_PU_function_all_optics.py  001_make_folders_collider_30cm.py  001_make_folders_collider_beta_30cm.py  001_make_folders_ions_2024_collider.py  001_make_folders_tune_scan_20cm.py  001_make_folders_tune_scan_24cm.py  001_make_folders_tune_scan_30cm.py  001_make_folders_tune_scan_30cm_lower_emittance.py  002_chronjob.py  003_postprocessing.py  config.yaml  nohup.out  user_defined_functions.py
master_study/master_jobs/1_build_distr_and_collider/: 1_build_distr_and_collider.py  config.yaml  optics_specific_tools.py  optics_specific_tools_runIII.py  test_it.py
master_study/master_jobs/2_configure_and_track/: 2_configure_and_track.py  config.yaml  configure_and_track.py  misc.py  test_it.py  user_misc.py
master_study/master_jobs/filling_scheme/: 25ns_1983b_1970_1657_1684_144bpi_19inj_3INDIVs_converted.json  25ns_2358b_2345_1692_1628_236bpi_14inj_hybrid_2INDIV.json  25ns_2604b_2592_2310_2421_4x48bpi_16inj.json  50ns_160b_160_80_73_40bpi_PbPb_BBMD.json  fill_ions_9310.json  fill_ions_9310_converted.json  full_scheme.json
master_study/scans/MD2024/: tree_maker.json
studies/: 001_make_folders.py
studies/filling_scheme/: 25ns_2760b_2748_2492_2574_288bpi_13inj_800ns_bs200ns.json  50ns_1240b_1088_1088_398_56bpi_PbPb.json  50ns_1240b_1088_1088_398_56bpi_PbPb_converted.json
studies/scripts/: 1_create_study.py  1_create_study_gz_large.py  1_create_study_gz_large_test.py  1_create_study_gz_large_test_GPU.py  1_create_study_stress_test.py  1_create_study_test_GPU.py  2_run_jobs.py  3_postprocess.py  config.yaml  generate_run_file.py
(+44 files in other folders)
