[tool.poetry]
name = "da-boilerplate"
version = "0.1.0"
description = "Dynamic aperture boilerplate for HL-LHC"
authors = ["Colas Droin <colas.noe.droin@cern.ch>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
xmask = {path = "external_dependencies/xmask", develop = true}
tree-maker = {git = "https://github.com/xsuite/tree_maker.git"}
xsuite = "0.12.1"
fastparquet = "^2024.5.0"
cupy-cuda11x = "^13.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
