[tool.poetry]
name = "da-boilerplate"
version = "0.1.0"
description = "Dynamic aperture boilerplate for various LHC versions (including HL-LHC)"
authors = ["Colas Droin <colas.noe.droin@cern.ch>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
xmask = {path = "external_dependencies/xmask", develop = true}
tree-maker = {git = "https://github.com/xsuite/tree_maker.git"}
xsuite = "^0.16.2"
fastparquet = "^2024.5.0"
cupy-cuda11x = "^13.2.0"
psutil = "^6.0.0"
cpymad = "^1.16.3"
nafflib = "^2.0.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
